package org.flyndre.DataModel.EnumTypes;

public enum Color {
    BLACK,
    WHITE
}
