package de.flyndre.flengine.Model.Board;

public class Field {
    char positionRow;
    int positionColumn;
}
