@startuml ClassOverview
class Field
Field : fieldColumn : char
Field : fieldRow : int 
Field : getString() : String
Board --> Figure
Board : whitePlayer : Player
Board : blackPlayer : Player
Board : figures: Figures[]
Board : checkForCheckMate(player : Player) : Boolean
Board : checkForCheck(player : Player) : Boolean
Board : history : String[]
Board : totalTurns : int
Figure --> Field
enum COLOR 
COLOR : White
COLOR : Black
Figure : color : COLOR
Figure : move(field : Field) : void
Figure : currentPosition : Field 
Figure : remove() : void
Figure <|-- Pawn
Pawn : turnTo(figure : Figure) : void
Figure <|-- Bishop
Figure <|-- Knight
Figure <|-- Rook
Figure <|-- Queen
Figure <|-- King
Board -- Player
Player : turn() : void
Player : board : Board
@enduml